feat: Implement core MVP components
- Add manifest parser and validator with comprehensive validation
- Implement cache manager for local model storage
- Add registry HTTP client with download support
- Implement SHA256 hashing utilities
- Add comprehensive unit tests for all components
- Enhance CI/CD with test coverage, linting, and security scanning
- Add golangci-lint configuration
- Update Makefile with validation targets

All tests passing. Ready for CLI integration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,41 +8,99 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.21'
+        cache-dependency-path: go.sum
     
     - name: Download dependencies
       run: go mod download
     
-    - name: Run linters
-      run: go vet ./...
-    
     - name: Run tests
-      run: go test -v ./...
+      run: go test -v -coverprofile=coverage.out ./...
     
-    - name: Build
-      run: go build ./cmd/axon
+    - name: Upload coverage
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.out
+        fail_ci_if_error: false
+    
+    - name: Check test coverage
+      run: |
+        coverage=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
+        echo "Coverage: ${coverage}%"
+        if (( $(echo "$coverage < 50" | bc -l) )); then
+          echo "Coverage is below 50%"
+          exit 1
+        fi
 
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.21'
+    
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: latest
+        args: --timeout=5m
+
+  vet:
+    name: Vet
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.21'
+    
+    - name: Run go vet
+      run: go vet ./...
+    
+    - name: Run go fmt check
+      run: |
+        if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then
+          echo "Code is not formatted. Run 'go fmt ./...'"
+          gofmt -s -d .
+          exit 1
+        fi
+
+  build:
+    name: Build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        go-version: ['1.21']
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ matrix.go-version }}
     
     - name: Build
       run: go build -o axon ./cmd/axon
@@ -52,4 +110,22 @@ jobs:
       with:
         name: axon-${{ matrix.os }}
         path: axon
+        if-no-files-found: error
 
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.21'
+    
+    - name: Run Gosec Security Scanner
+      uses: securego/gosec@master
+      with:
+        args: './...'
