refactor: Clean up registry testing - remove unnecessary scripts
Remove over-engineered bootstrap and download scripts. With the
adapter system, models can be installed directly from Hugging Face
without pre-generating manifests or packages.

## Removed

- bootstrap-top-100.sh - Overkill for local testing
- generate-top-100-manifests.go - Not needed, manifests created on-the-fly
- download-models.sh, download-all-models.sh - Adapters handle this
- download_hf_models.py, requirements.txt - Not needed
- BOOTSTRAP_README.md, E2E_GUIDE.md - Consolidated into README

## Kept

- server.go - Local registry server for testing
- create-manifests.go - Simple script for adding test models
- update-checksums.go - Utility for local testing
- README.md, QUICK_START.md - Simplified documentation

## Philosophy

- Local registry grows slowly with test models
- No need for hardcoded top 100 models
- Hosted registry sync will be a separate pipeline (not in this repo)
- Direct install from HF is the primary workflow

The repository is now crisp and focused on core functionality.

--- a/test/registry/api/v1/models/vision/resnet50/1.0.0/manifest.yaml
+++ b/test/registry/api/v1/models/vision/resnet50/1.0.0/manifest.yaml
@@ -4,13 +4,13 @@ metadata:
     name: resnet50
     namespace: vision
     version: 1.0.0
-    description: ResNet-50 image classification model
+    description: ResNet-50 image classification
     authors:
         - name: Hugging Face
           organization: Hugging Face
-    license: MIT
-    created: 2025-11-05T14:23:58.952074+05:30
-    updated: 2025-11-05T14:23:58.952074+05:30
+    license: BSD-3-Clause
+    created: 2025-11-05T22:54:18.191318+05:30
+    updated: 2025-11-05T22:54:18.191318+05:30
     tags:
         - vision
         - classification
