fix: Add Build status reporting and improve auto-merge
- Add Build status reporting in CI workflow (reports as 'Build' context)
- This fixes 'Build Expected' blocking issue
- Add small delay in auto-merge for status propagation
- Ensures all required checks (Test, Lint, Vet, Build) report correctly

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -200,6 +200,8 @@ Build"
               -f description="Bypassed by admin /approve command" \
               -f context="$check" 2>&1; then
               echo "✅ Created status for $check"
+              # Wait a moment for status to propagate
+              sleep 2
             else
               echo "⚠️  Failed to create status for $check (may already exist or insufficient permissions)"
             fi
