--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         fi
 
   build:
-    name: Build
+    name: Build (${{ matrix.os }}, ${{ matrix.go-version }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -122,6 +122,22 @@ jobs:
         name: axon-${{ matrix.os }}
         path: axon
         if-no-files-found: error
+    
+    - name: Report Build Status
+      if: always()
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const status = '${{ job.status }}' === 'success' ? 'success' : 'failure';
+          await github.rest.repos.createCommitStatus({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            sha: context.sha,
+            state: status,
+            context: 'Build',
+            description: status === 'success' ? 'All builds completed successfully' : 'Build failed',
+            target_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
+          });
 
   security:
     name: Security Scan
