--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,20 +122,35 @@ jobs:
         name: axon-${{ matrix.os }}
         path: axon
         if-no-files-found: error
+
+  build-status:
+    name: Build Status
+    needs: build
+    runs-on: ubuntu-latest
+    if: always()
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Report Build Status
-      if: always()
       uses: actions/github-script@v7
       with:
         script: |
-          const status = '${{ job.status }}' === 'success' ? 'success' : 'failure';
+          const buildJobs = ${{ toJSON(needs.build.result) }};
+          const allSuccess = Object.values(buildJobs).every(result => result === 'success');
+          const status = allSuccess ? 'success' : 'failure';
+          const description = allSuccess 
+            ? 'All builds completed successfully' 
+            : 'One or more builds failed';
+          
           await github.rest.repos.createCommitStatus({
             owner: context.repo.owner,
             repo: context.repo.repo,
             sha: context.sha,
             state: status,
             context: 'Build',
-            description: status === 'success' ? 'All builds completed successfully' : 'Build failed',
+            description: description,
             target_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
           });
 
