--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,10 +137,11 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const buildJobs = ${{ toJSON(needs.build.result) }};
-          const allSuccess = Object.values(buildJobs).every(result => result === 'success');
-          const status = allSuccess ? 'success' : 'failure';
-          const description = allSuccess 
+          // For matrix jobs, check if the overall job succeeded
+          // If any matrix job failed, needs.build.result will be 'failure'
+          const buildResult = '${{ needs.build.result }}';
+          const status = buildResult === 'success' ? 'success' : 'failure';
+          const description = status === 'success' 
             ? 'All builds completed successfully' 
             : 'One or more builds failed';
           
